--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
         <img src="images/23hs.jpg" alt="Historic Downtown">
         <img src="images/23hs2.jpg" alt="Historic Downtown">
         <img src="images/23hs3.jpg" alt="Historic Downtown">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3184.6141350610465!2d22.1133264!3d37.042845699999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1361b096cd4fa705%3A0x6e272c0d2c6b1521!2s23rd%20Of%20March%20Square!5e0!3m2!1sen!2sgr!4v1732114268753!5m2!1sen!2sgr" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
         
         <h3> Castle</h3>
         <p>The imposing Castle of Kalamata stands on a hill above the historic centre of the city, overlooking the area at a large radius, which was its initial purpose. It was built in the 13th century and is one of the numerous castles constructed in the Peloponnese by the Franks, who were seeking to establish their dominance over the widest possible range.</p>
@@ -73,6 +75,8 @@
         <h3> City Park</h3>
         <p>A beautiful spot for a relaxing walk or picnic. Perfect for a morning jog or to unwind in nature.</p>
         <img  src="images/parko.jpg" alt="City Park">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3185.210504924694!2d22.1099585!3d37.0286269!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1361ba77b44ab729%3A0x482d0711f915ed8!2sKalamata%20Municipal%20Railway%20Park!5e0!3m2!1sen!2sgr!4v1732113688783!5m2!1sen!2sgr" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 
         <h3> Experience the Beach strip, day and night</h3>
         <p>The beach is the place to be in the summer months and it’s a beautiful part of the city for a stroll or a bike ride at all times of the year. It stretches 2.5km along Navarinou Street, whose shops, restaurants and cafes come alive when the beach fills with sunbathers and swimmers.</p>
